tests/gabc-dump/should-fail/bad-secondary-clef-2.gabc
name: bad secondary clef (2);
%%
(c4) g(g@c3)
